<resources>
    <string name="app_name">Gamificacao</string>
    <string name="textoA">" Oi, meu nome é Rob Wilian"</string>
    <string name="textoB">Que bom que você está aqui!vamos jogar?</string>
    <string name="TitloCompleteAsFrases">Complete as Frases</string>
    <string name="ContentDescriptionTexto"> Texto</string>
    <string name="ex01"> Responda as peguntas com as respostas abaixo indicadas. </string>
    <string name="opex02">String; Integer; Ping; Array ; Boolean   </string>

    <string name="aex01">
        é uma estrutura de dados que contém um grupo de elementos. Normalmente, esses elementos são todos do mesmo tipo de dados , como um inteiro ou uma string .
    </string>

    <string name="bex01">
    é um tipo de dado primitivo que possui dois valores, que podem ser considerados como 0 ou 1, falso ou verdadeiro.

    </string>

    <string name="cex01">
é um tipo de dados usado na programação, como um inteiro e uma unidade de ponto flutuante, mas é usado para representar texto em vez de números.
    </string>

    <string name="dex01">
       é um sinal enviado para um host que solicita uma resposta. Ele serve dois propósitos principais: 1) verificar se o host está disponível e 2) medir quanto tempo a resposta demora.
    </string>
    <string name="eex01">é um número inteiro (não uma fração) que pode ser positivo, negativo ou zero.</string>
    <string name="confirmar">Confirmar</string>

    <string name="Total">Total</string>

    <string name="title_activity_pontuacao">Pontuação</string>
    <string name="titulo_inicio">Termos técnicos de informática</string>
    <string name="content_descricao">imagem de robo inicial</string>
    <string name="img_mapinha">Imagem do mapa</string>
    <string name="imagem_robo_mapa">imagem do robo no mapa</string>
    <string name="titulo_mapa_progresso">Mapa de Progresso</string>
    <string name="bt_facil">Fácil</string>
    <string name="bt_medio">Médio</string>
    <string name="bt_dificil">Dificíl</string>
    <string name="img_qtd_vidas">imagem de vidas</string>
    <string name="bt_voltar">Voltar</string>
    <string name="insira_nome">Insira seu nome</string>
    <string name="atv9ex1">Programa que funciona como interface entre o hardware e o sistema operacional, indicando os equipamentos existentes e disponíveis para determinadas funções.</string>
    <string name="atv9ex2">Uma especificação industrial para áreas de redes pessoais sem fio. Provê uma maneira de conectar e trocar informações entre dispositivos como telefones celulares.</string>
    <string name="atv9ex3">Parte da informação de um usuário, armazenada no browser, que fica disponível para o servidor identificá-la.</string>
    <string name="atv9ex4">Mecanismo que permite a ponte entre duas redes que trabalham como protocolos diferentes.</string>
    <string name="atv9ex5">Linguagem de script para publicação na Web, que permite que se insiram instruções simples de programação.</string>
    <string name="botao_proximo">Próximo </string>
    <string name="msg_result">Resultado </string>
    <string name="bt_home_lets_go">Vamos lá </string>
    <string name="msgSair">Você tem certeza que deseja sair ? </string>
    <string name="msgAlerta">Alerta! </string>
    <string name="msgNao">Não </string>
    <string name="msgSim">Sim </string>
    <string name="msgReiniciar">Reiniciar Módulo </string>
    <string name="msgTryAgain">Tente Novamente </string>
    <string name="msgRetry">Tente Novamente </string>
    <string name="msgParabens">Parabéns </string>
    <string name="msgHits">"Êxitos: "</string>
    <string name="msgNext">Próximo </string>
    <string name="msgGameOver">Fim de Jogo </string>
    <string name="msgGamerOL">Fim de jogo! Vidas:</string>
    <string name="msgYouDie">Você morreu </string>
    <string name="txt_termosTecnicos">Termos Técnicos</string>
    <string name="txtJogodaMemoria">Jogo da memória</string>
    <string name="tt_faq" >Método de pontuação</string>
    <string name="faq_1">Existe 10 fases e cada fase tem 5 perguntas, cada pergunta vale um ponto, que no total corresponde a 50 pontos.</string>
    <string name="faq_2" >Caso você erre uma pergunta você perderá uma vida.</string>
    <string name="faq_3">Caso você volte uma fase seus pontos serão dividido por 2 no final do jogo, para cada vez que voltar.</string>
    <string name="faq_4">Caso você perca suas vidas o jogo acaba.</string>
    <string name="faq_5">Caso você reinicie a fase as vidas que você perdeu na mesma fase serão recuperadas se elas não tiverem acabado, mas isso implicará nos seus pontos.
        No final do jogo o total será dividido por 2 para cada vez que se utilizar a função voltar.</string>
</resources>
